--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3823,9 +3823,13 @@
     "context": "used by filter label",
     "string": "Used by"
   },
-  "src_dot_giftCards_dot_GiftCardsList_dot_GiftCardsListOrderCard_dot_giftCardOrderMessage": {
+  "src_dot_giftCards_dot_GiftCardsList_dot_GiftCardsListOrderInfoCard_dot_giftCardOrderInfoMessage": {
     "context": "alert card message",
-    "string": "Gift cards will appear after their order is fullfilled. {orderPageLink}"
+    "string": "Gift cards will appear after their order is fullfilled. "
+  },
+  "src_dot_giftCards_dot_GiftCardsList_dot_GiftCardsListOrderInfoCard_dot_giftCardOrderInfoMessageLink": {
+    "context": "alert card message link",
+    "string": "View Orders with Gift Cards"
   },
   "src_dot_giftCards_dot_GiftCardsList_dot_GiftCardsListTable_dot_GiftCardsListTableHeader_dot_deleteLabel": {
     "context": "GiftCardEnableDisableSection enable label",
