--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -2677,13 +2677,13 @@
     "context": "note about customer",
     "string": "Note"
   },
-  "src_dot_customers_dot_components_dot_CustomerInfo_dot_252313757": {
-    "context": "customer informations, header",
-    "string": "Personal Informations"
-  },
-  "src_dot_customers_dot_components_dot_CustomerInfo_dot_778526801": {
+  "src_dot_customers_dot_components_dot_CustomerInfo_dot_2312694610": {
     "context": "customer contact section, header",
-    "string": "Contact Informations"
+    "string": "Contact Information"
+  },
+  "src_dot_customers_dot_components_dot_CustomerInfo_dot_4121042904": {
+    "context": "account information, header",
+    "string": "Account Information"
   },
   "src_dot_customers_dot_components_dot_CustomerListPage_dot_1643417013": {
     "string": "Search Customer"
